border none again

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ab90e6; }
+  background: #94690f; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #2b0a5b; }
+  background: #f339cd; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #79029f; }
+  background: #c37a25; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #21f78e; }
+  background: #2fac56; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #19863e; }
+  background: #688e44; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #1524f9; }
+  background: #7ec669; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #53c57b; }
+  background: #46180f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a68906; }
+  background: #aa05ff; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #17bf82; }
+  background: #9c5f89; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #d85874; }
+  background: #33969c; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #5e850d; }
+  background: #456903; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #d7c2f9; }
+  background: #adabcf; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e87f3c; }
+  background: #2cd024; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #4bcd89; }
+  background: #17e646; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #bb733c; }
+  background: #f5c9e1; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #121fa0; }
+  background: #58df4b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #fdc5c7; }
+  background: #9f5823; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #c4ea46; }
+  background: #ac0eaa; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #eaf84f; }
+  background: #ee3337; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #cc93bc; }
+  background: #c80705; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #24147e; }
+  background: #1e8377; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #73ce2a; }
+  background: #a11b04; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #fb4fdf; }
+  background: #1af47c; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #13a59a; }
+  background: #c8c47f; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #649da8; }
+  background: #c4701f; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #815d1a; }
+  background: #b10d40; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #0853a4; }
+  background: #da0de9; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #08ba74; }
+  background: #ad930e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #721dc3; }
+  background: #912dcf; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #5279cd; }
+  background: #f3eb9a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #0c6701; }
+  background: #6851fe; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #daa254; }
+  background: #062848; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #362d9e; }
+  background: #55347e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #879c39; }
+  background: #b5e6e4; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #9dca37; }
+  background: #2375b7; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #3dcaf5; }
+  background: #bb9987; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #81a54c; }
+  background: #4488ed; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #3e367f; }
+  background: #0f3c87; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #165a76; }
+  background: #b2741c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #7260c2; }
+  background: #e1b39d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #907119; }
+  background: #5c3c69; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #da0ed7; }
+  background: #f4fcc5; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #31b54c; }
+  background: #6e09fa; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #5de93d; }
+  background: #5fd772; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #111a13; }
+  background: #4e027f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #20f83d; }
+  background: #cf699a; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #22ec6b; }
+  background: #d7f444; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #bd253b; }
+  background: #e540c7; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #8a8369; }
+  background: #e02e4f; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #feeae1; }
+  background: #c156bc; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ccd9ff; }
+  background: #f61095; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4e3bcf; }
+  background: #2e1c44; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #cc2f40; }
+  background: #9d91ff; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3e8b9e; }
+  background: #6dd680; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #924178; }
+  background: #b6f7e0; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #768dba; }
+  background: #e20c46; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #b852c4; }
+  background: #2adf2e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #e4b5b0; }
+  background: #446cab; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #6b2526; }
+  background: #5e94ff; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #3b599e; }
+  background: #801b77; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #0620cb; }
+  background: #1ec489; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #e60832; }
+  background: #f00c58; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #d042af; }
+  background: #bc3beb; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #8fff9f; }
+  background: #45c7e0; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #5d60fe; }
+  background: #da5468; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #acf1d8; }
+  background: #781689; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #027eca; }
+  background: #0dc87c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #6c6428; }
+  background: #01ae6e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #b576e2; }
+  background: #657ad7; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ec5d31; }
+  background: #76eab7; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #dd9f9c; }
+  background: #b15b97; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #d50a12; }
+  background: #90177b; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #460604; }
+  background: #3d69e6; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #36d6b0; }
+  background: #fe5e87; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ff52dc; }
+  background: #8bef3a; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #6f70a1; }
+  background: #a279f9; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #2e0b94; }
+  background: #3a4678; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a9b1fe; }
+  background: #daccdb; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #cdd267; }
+  background: #577e75; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b740b8; }
+  background: #767de3; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #4c5364; }
+  background: #9681fc; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #996cce; }
+  background: #61adef; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #dbf78c; }
+  background: #242741; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #de3ba3; }
+  background: #ab6e02; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #7a02b8; }
+  background: #73092c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #191c63; }
+  background: #08faea; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #8494ab; }
+  background: #8d869f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #e45b9b; }
+  background: #446779; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #66b16e; }
+  background: #a41647; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #5f648a; }
+  background: #63f22b; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #1107ff; }
+  background: #fb4fb8; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #f09c41; }
+  background: #1221d8; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #19d47c; }
+  background: #4e0a17; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9728c3; }
+  background: #e0474b; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #2cbe26; }
+  background: #930bb6; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d57346; }
+  background: #3c5bce; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #dd8f8e; }
+  background: #5c09b8; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #2174aa; }
+  background: #874bdf; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #0c24a9; }
+  background: #a09745; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #afc8d2; }
+  background: #b243c8; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11925,7 +11925,8 @@ input:checked + .sliders:before {
     top: -2px;
     left: 0px;
     margin: 0px;
-    z-index: 3; }
+    z-index: 3;
+    border: 0px solid #cdcdd6; }
 
 .policy-search .search-wrap-standard::before {
   display: none; }
