--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3154,6 +3154,7 @@ table .bold-heading {
     border: 1px solid #bababa;
     padding-left: 40px;
     border-radius: 40px;
+    outline: none !important;
   }
 
 
