--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #94690f; }
+  background: #842460; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f339cd; }
+  background: #bc7aba; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c37a25; }
+  background: #ae6c06; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #2fac56; }
+  background: #097c18; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #688e44; }
+  background: #97f126; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7ec669; }
+  background: #a77cf7; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #46180f; }
+  background: #a39513; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #aa05ff; }
+  background: #777e27; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #9c5f89; }
+  background: #f536a1; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #33969c; }
+  background: #1f75f5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #456903; }
+  background: #385820; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #adabcf; }
+  background: #86d305; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #2cd024; }
+  background: #86989b; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #17e646; }
+  background: #0f5b2a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #f5c9e1; }
+  background: #27745d; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #58df4b; }
+  background: #53385b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #9f5823; }
+  background: #cd65e5; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ac0eaa; }
+  background: #115bf9; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ee3337; }
+  background: #73cd21; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #c80705; }
+  background: #ca693b; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #1e8377; }
+  background: #6d7c65; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #a11b04; }
+  background: #ec11c1; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #1af47c; }
+  background: #62e1cd; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #c8c47f; }
+  background: #075542; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #c4701f; }
+  background: #531f78; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #b10d40; }
+  background: #5096df; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #da0de9; }
+  background: #9a3a31; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #ad930e; }
+  background: #ce417e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #912dcf; }
+  background: #38f752; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f3eb9a; }
+  background: #9c37ec; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #6851fe; }
+  background: #0afbff; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #062848; }
+  background: #055145; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #55347e; }
+  background: #d19688; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #b5e6e4; }
+  background: #d16988; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #2375b7; }
+  background: #e369a0; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #bb9987; }
+  background: #354abc; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #4488ed; }
+  background: #b62aa7; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #0f3c87; }
+  background: #e6cc72; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #b2741c; }
+  background: #d16f3b; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e1b39d; }
+  background: #ab0867; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #5c3c69; }
+  background: #f59ca7; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #f4fcc5; }
+  background: #d4bf32; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #6e09fa; }
+  background: #1d4417; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #5fd772; }
+  background: #9177ca; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #4e027f; }
+  background: #0a95ea; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #cf699a; }
+  background: #fa0493; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d7f444; }
+  background: #4a769f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e540c7; }
+  background: #e0c4ba; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e02e4f; }
+  background: #b73619; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c156bc; }
+  background: #d4bed3; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #f61095; }
+  background: #d58aca; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #2e1c44; }
+  background: #9e55e0; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #9d91ff; }
+  background: #3c4e6a; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #6dd680; }
+  background: #1cde89; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #b6f7e0; }
+  background: #0c57e9; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e20c46; }
+  background: #f3f72e; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2adf2e; }
+  background: #0f3834; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #446cab; }
+  background: #bc1b77; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #5e94ff; }
+  background: #9c8512; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #801b77; }
+  background: #8c4748; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #1ec489; }
+  background: #3bde1d; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f00c58; }
+  background: #d790d1; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #bc3beb; }
+  background: #31a2de; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #45c7e0; }
+  background: #b669e7; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #da5468; }
+  background: #5f7912; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #781689; }
+  background: #35942b; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #0dc87c; }
+  background: #9234d6; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #01ae6e; }
+  background: #c672ec; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #657ad7; }
+  background: #5a20b3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #76eab7; }
+  background: #636913; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #b15b97; }
+  background: #162876; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #90177b; }
+  background: #5de1a2; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #3d69e6; }
+  background: #c1a942; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #fe5e87; }
+  background: #0ce182; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8bef3a; }
+  background: #54c4fb; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a279f9; }
+  background: #c45e0c; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #3a4678; }
+  background: #599b73; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #daccdb; }
+  background: #40e48c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #577e75; }
+  background: #1b3889; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #767de3; }
+  background: #f75990; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #9681fc; }
+  background: #cce9f1; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #61adef; }
+  background: #a95d5b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #242741; }
+  background: #517cb1; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #ab6e02; }
+  background: #4a9f90; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #73092c; }
+  background: #3c425c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #08faea; }
+  background: #e4a9c6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #8d869f; }
+  background: #629c7a; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #446779; }
+  background: #a670bf; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a41647; }
+  background: #4780dc; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #63f22b; }
+  background: #6bee7c; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #fb4fb8; }
+  background: #5b461d; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #1221d8; }
+  background: #dc35b7; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4e0a17; }
+  background: #e2f905; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #e0474b; }
+  background: #ccd9c6; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #930bb6; }
+  background: #33df1e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #3c5bce; }
+  background: #d79b9e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #5c09b8; }
+  background: #95fde1; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #874bdf; }
+  background: #888187; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #a09745; }
+  background: #e6f73d; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b243c8; }
+  background: #712da9; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9908,7 +9908,8 @@ table .bold-heading {
     padding: 14px 10px;
     border: 1px solid #bababa;
     padding-left: 40px;
-    border-radius: 40px; }
+    border-radius: 40px;
+    outline: none !important; }
   .search-wrap-standard .search-query-dropdown-btn {
     position: absolute;
     right: 15px;
@@ -11925,8 +11926,7 @@ input:checked + .sliders:before {
     top: -2px;
     left: 0px;
     margin: 0px;
-    z-index: 3;
-    border: 0px solid #cdcdd6; }
+    z-index: 3; }
 
 .policy-search .search-wrap-standard::before {
   display: none; }
