--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -534,6 +534,19 @@ input[type="checkbox"] {
 
   }
 
+  .admin-icon {
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    background-image: url(../images/Admin_off.svg);
+
+    &:hover {
+      background-image: url(../images/Admin_on.svg);
+    }
+
+
+  }
+
 
 
   .help-icon {
