policy routine resulte page

--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -364,6 +364,13 @@
         }
     }
 
+    .policy-routine-results-wrapper {
+        .inner-tab-content {
+            .col-lg-3 {
+                padding-right: 15px !important;
+            }
+        }
+    }
 
 }
 
