--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #1eb82a; }
+  background: #ca73c2; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #559a46; }
+  background: #f9bde3; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #70192a; }
+  background: #4fa338; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #2bc982; }
+  background: #c87f6d; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #aec51f; }
+  background: #6f3053; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #8e91d4; }
+  background: #089c58; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #8679a9; }
+  background: #7ebaaa; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #2c55c3; }
+  background: #1598f6; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #acfa6b; }
+  background: #03675c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e70778; }
+  background: #89c0de; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #4fe8fb; }
+  background: #050d17; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #ca3801; }
+  background: #181a04; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #229d3b; }
+  background: #991f7a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #3cbefe; }
+  background: #01138c; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #806534; }
+  background: #215110; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #976381; }
+  background: #3d5d4c; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b3a745; }
+  background: #7c5704; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d4af79; }
+  background: #339493; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #0e1fc3; }
+  background: #e78db7; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #515af0; }
+  background: #47fade; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #87775f; }
+  background: #b5579e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #cf952d; }
+  background: #d2bdbb; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #9b81be; }
+  background: #5e9063; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #16d473; }
+  background: #f14b90; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #08e9e1; }
+  background: #e2d9d2; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #37b6cd; }
+  background: #36d9d2; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2dff55; }
+  background: #9b337c; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #89e794; }
+  background: #dfaf50; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c6a2e6; }
+  background: #5d2ea2; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #c044de; }
+  background: #d824d4; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #03160d; }
+  background: #65ee96; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #7457d5; }
+  background: #716cdc; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3d4360; }
+  background: #938789; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #b02c07; }
+  background: #3fcd1d; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a6c86d; }
+  background: #4dfe7e; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #6822e8; }
+  background: #5ae079; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #6e2b5e; }
+  background: #79e505; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #87b17d; }
+  background: #75cdbd; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #5625e8; }
+  background: #337619; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c88d1c; }
+  background: #2b5a3e; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #e2bd2c; }
+  background: #60606e; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #1d7ae4; }
+  background: #0c7ed5; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #9610e7; }
+  background: #8571cd; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #101c5d; }
+  background: #100794; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #995388; }
+  background: #7b44d6; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #25dc2e; }
+  background: #391f7c; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #22f6b7; }
+  background: #b6f185; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #307495; }
+  background: #4bb0df; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b0c437; }
+  background: #ebb9cc; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #3fd1d6; }
+  background: #a8e41d; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #5c71f4; }
+  background: #e9124d; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #2ad519; }
+  background: #de453d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #52779b; }
+  background: #3bb252; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f05815; }
+  background: #d0b9eb; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #797523; }
+  background: #248243; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #43f01e; }
+  background: #87d3b7; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #b45f97; }
+  background: #4f0b16; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #939462; }
+  background: #94c799; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #178fd4; }
+  background: #7c8036; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f5206e; }
+  background: #8ca014; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #6e5441; }
+  background: #069cb3; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #2c8dc7; }
+  background: #ea03c7; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #3bf2cc; }
+  background: #05d094; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #158ab6; }
+  background: #a9a9fd; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #94cfe7; }
+  background: #77fce3; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #706217; }
+  background: #710bce; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b03c33; }
+  background: #f73d15; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #0b8855; }
+  background: #5ad86e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #84aaea; }
+  background: #dcdb3c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ac34f9; }
+  background: #0e3fad; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #ab8829; }
+  background: #70bfd1; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #847b6d; }
+  background: #ad4dff; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #3c9688; }
+  background: #9a4db2; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #3c4c46; }
+  background: #702b8c; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #febd4d; }
+  background: #289ba1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #7af00c; }
+  background: #4fc3a8; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #08efdb; }
+  background: #ba5f19; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a3bc69; }
+  background: #8e5718; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #4f88e1; }
+  background: #d45704; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #e077f0; }
+  background: #54eda5; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #f9df9e; }
+  background: #58ab54; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #1e5ba5; }
+  background: #2531e6; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a4054c; }
+  background: #498988; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #4e1add; }
+  background: #7901eb; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #7837fa; }
+  background: #557031; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #a7e80d; }
+  background: #693bd6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #53dbc3; }
+  background: #56347e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #dcc6bb; }
+  background: #1ea2fa; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ad6a7a; }
+  background: #285d9b; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #57f096; }
+  background: #fd1e3b; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8ee8c0; }
+  background: #170643; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #df66c6; }
+  background: #a5f09b; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #24e5db; }
+  background: #c8abf5; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #845ceb; }
+  background: #e39ff3; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #293138; }
+  background: #391605; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #3fc836; }
+  background: #4df2ca; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #abd43a; }
+  background: #7de31f; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #858d80; }
+  background: #6353ec; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #69cc09; }
+  background: #b6083e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #c780b9; }
+  background: #49d3a4; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11483,11 +11483,15 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -12437,6 +12441,45 @@ td .check-container {
 .box-bottom-bar .field-check-box input[type="checkbox"]:checked + label {
   background-image: url(../images/enable-check.png); }
 
+.policy-left-part {
+  height: 100%; }
+  .policy-left-part .start-date-text {
+    padding: 20px; }
+    .policy-left-part .start-date-text span {
+      color: #4c4c4c;
+      margin-bottom: 25px; }
+    .policy-left-part .start-date-text h2 {
+      color: #4c4c4c;
+      margin: 5px 0px 15px; }
+
+.right-party-row {
+  padding: 30px; }
+  .right-party-row .title-row-part {
+    font-size: 20px;
+    margin-bottom: 25px; }
+
+.right-part-items-div {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-gap: 30px;
+  border-bottom: 1px solid #788288;
+  padding-bottom: 20px; }
+  .right-part-items-div .right-part-item {
+    display: flex; }
+    .right-part-items-div .right-part-item .logo-icon-div {
+      margin-right: 15px; }
+    .right-part-items-div .right-part-item .item-details-div {
+      padding-top: 6px; }
+      .right-part-items-div .right-part-item .item-details-div p {
+        color: #4c4c4c;
+        font-size: 14px; }
+      .right-part-items-div .right-part-item .item-details-div .color-text .green-txt {
+        color: #398d01;
+        font-weight: bold; }
+      .right-part-items-div .right-part-item .item-details-div .color-text .red-txt {
+        color: #f00f00;
+        font-weight: bold; }
+
 @media screen and (max-width: 767px) {
   .profile-box {
     padding: 10px; }
@@ -12690,7 +12733,10 @@ td .check-container {
     flex-wrap: wrap; }
     .connectors-box-wrapper .connec-box-div {
       flex-basis: inherit;
-      margin-bottom: 15px; } }
+      margin-bottom: 15px; }
+
+  .policy-routine-results-wrapper .inner-tab-content .col-lg-3 {
+    padding-right: 15px !important; } }
 /*767 screen end here*/
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
   .query-wizard-exp-contents {
